# tcunit-precommit

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  conda.yml  pyproject.toml
.github/workflows/: pytest.yml
src/tcunit_precommit/: unittest_name_check.py
src/unittest_name_fixer/: __init__.py  cli.py
tests/: test_unittest_name_check.py  test_unittest_name_fixer.py
tests/data/: UnitTestOnlyMatchingNames.TcPOU  UnitTestOnlyMismatchingNames.TcPOU  UnitTestWithOneMatchingAndOneNonMatchingName.TcPOU
tests/unittest_name_fixer/: __init__.py
unittest_name_fixer/: cli.py  utils.py
unittest_name_fixer/tests/: test_utils.py
unittest_name_fixer/tests/data/: OneTestHasMissingTest.TcPOU  OrderedTest.TcPOU
