[project]
name = "TcUnit-pre-commit"
version = "0.1.0"
description = "A project for TcUnit pre-commit hooks"
authors = [
    { name = "Roald" }
]
requires-python = ">=3.9, <3.13"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=6.2"
]

[project.scripts]
unittest_name_fixer = "unittest_name_fixer.cli:main"
