[project]
name = "tcunit-precommit"
version = "0.2.0"
description = "A project for TcUnit pre-commit hooks."
authors = [
    { name = "Roald" }
]
requires-python = ">=3.9, <3.13"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=6.2"
]

[project.scripts]
unittest-name-fixer = "unittest_name_fixer.cli:main"
